--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -2,9 +2,11 @@
      ARCHIVE
      ========================================================================== */
   
-  .archive {
-    margin: 0 auto;
-  
+.archive {
+  margin: 0 auto;
+  max-width: 1000px;
+  padding: 2rem 1rem;
+}
 
   
   .archive__item {
@@ -123,6 +125,9 @@
   
   .archive {
     .grid__wrapper {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.5rem;
       /* extend grid elements to the right */
   
       @include breakpoint($large) {
