--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,9 +1,9 @@
 ---
-# Only the main Sass file needs front matter
+# Only the main Sass file needs front matter (the dashes are enough)
 search: false
 ---
 
 @charset "utf-8";
 
-@import "minimal-mistakes/skins/default";
-@import "minimal-mistakes";
+@import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
+@import "minimal-mistakes"; // main partials
