--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -85,3 +85,7 @@ layout: default
     {% include page__related.html posts=site.posts %}
   {% endif %}
 </div>
+
+{% if page.math %}
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+{% endif %}
