--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,11 @@
         {% include_cached search/search_form.html %}
       </div>
     {% endif %}
+    
+    {% if page.use_math %}
+      {% include mathjax_support.html %}
+    {% endif %}
+
 
     <div id="footer" class="page__footer">
       <footer>
